<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scores_app">SCORES APP</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>

</resources>
